# ort_custom_op_playground

./: .gitignore
create_custom_op/: CMakeLists.txt  README.MD  custom_op_library.cc  load_custom_op.py
very_simple_ait_custom_op/: load_ait_custom_op.py
